oxygen-framework/css/outputclasses/dl-outputclasses.less
/* ... */
*[class~='topic/dl'][outputclass~='table'] > *[class~='topic/dlentry'] > *[class~='topic/dt'],
*[class~='topic/dl'][outputclass~='table'] > *[class~='topic/dlhead'] > *[class~='topic/dthd'] {
	width		: 35%;
}

*[class~='topic/dl'][outputclass~='table'] > *[class~='topic/dlentry'] > *[class~='topic/dd'],
*[class~='topic/dl'][outputclass~='table'] > *[class~='topic/dlhead'] > *[class~='topic/ddhd'] {
	width		: 65%;
}

*[class~='topic/dl'][outputclass~='table'] *[class~='topic/dd'] > *:first-child,
*[class~='topic/dl'][outputclass~='table'] *[class~='topic/dd'] > *[class~="topic/div"]:first-child > *:first-child {
	margin-top: 0;
}

*[class~='topic/dl'][outputclass~='table'] *[class~='topic/dd'] > *:last-child,
*[class~='topic/dl'][outputclass~='table'] *[class~='topic/dd'] > *[class~="topic/div"]:last-child > *:last-child {
	margin-bottom: 0;
}

*[class~='topic/dl'][outputclass~='table'] *[class~='topic/dd'] > *[class~="topic/sli"] {
	margin-left: 1em;
}

*[class~='topic/dl'][outputclass~='table'][*|header] > *[class~='topic/dlentry']:first-child > *[class~='topic/dt'],
*[class~='topic/dl'][outputclass~='table'][*|header] > *[class~='topic/dlentry']:first-child > *[class~='topic/dd'] {
	padding-top: 0;
}

*[class~='topic/dl'][outputclass~='table'][*|header] > *[class~='topic/dlentry']:first-child > *:before(@{conbat-header-index}) {
    display	: block;
    
    /* Get text from header attribute of tgroup element */
    content	: oxy_xpath(oxy_concat("tokenize(ancestor::*[contains(@class, ' topic/dl ')]/@*:header, '[|]')[", oxy_xpath("count(preceding-sibling::*) + 1"), "]"));
    
    /* Same settings as the real table header */
    .table-header;
    
    /* draw a line to seperate header from row */
    border-bottom	: @table-border;
    
    /* Undo the padding of the entry to avoid a white gap */
    margin-top:     -1px;
    margin-left:    -5px;
    margin-right:   -5px;
}




/********************************************/
/* outputclass: tree 						*/



*[class~='topic/dl'][outputclass~='tree'] {
    display: block;
    margin: 6pt;
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] {
    display: 				block;
    border-color: 			#AAAAAA;
    border-style:			solid none solid solid;
    border-bottom-color: 	#FFFFFF;	/* Ausblenden der untere Linie über die Farbe, da anderenfalls auch die linke Linie nicht immer lang genug ist. */
    border-width:			1pt;
    padding-left: 			2pt;
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"]:has(*[class~='topic/dlentry']) {
    -oxy-foldable: 			true;
	-oxy-not-foldable-child:dt;
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dlentry"] {
    margin-left: 12pt;
}

*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"] {
	border-right-style: solid;		/* Einblenden der rechten Linie */
}

*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"]:last-child {
    border-bottom-color		: #AAAAAA;	/* Einblenden der letzten, abschließeden Linie */
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dt"] {
    display: 		block;
    font-weight : 	normal;
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] > *[class~="topic/dd"] {
	margin-top: -1.4em;
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dt"] + *[class~="topic/dt"] + *[class~="topic/dd"] {
	margin-top: -2.8em;
	min-height: 2.8em;
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dd"] > *:first-child,
*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dd"] > *[class~="topic/div"]:first-child > *:first-child,
*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dd"] > *[class~="topic/div"]:first-child > *[class~="topic/div"]:first-child > *:first-child {
	margin-top: 0;
}

*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dd"] > *:last-child,
*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dd"] > *[class~="topic/div"]:last-child > *:last-child,
*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] *[class~="topic/dd"] > *[class~="topic/div"]:last-child > *[class~="topic/div"]:last-child > *:last-child {
	margin-bottom: 0;
}


*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"] > *[class~="topic/dd"] {
    display: block;
	margin-left: @dl-tree-dd-offset;
}

*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dd"] {
	margin-left: @dl-tree-dd-offset - (1 * @dl-tree-dd-indent);
}

*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dd"] {
	margin-left: @dl-tree-dd-offset - (2 * @dl-tree-dd-indent);
}

*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dd"] {
	margin-left: @dl-tree-dd-offset - (3 * @dl-tree-dd-indent);
}

*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dd"] {
	margin-left: @dl-tree-dd-offset - (4 * @dl-tree-dd-indent);
}

*[class~='topic/dl'][outputclass~='tree'] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dlentry"] > *[class~="topic/dd"] {
	margin-left: @dl-tree-dd-offset - (5 * @dl-tree-dd-indent);
}
/* ... */

